--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -5,6 +5,7 @@
 	respective keys are treated as function keys, not as modifiers.
 	This avoids destroying non-ASCII keyboard input when Scroll Lock
 	is toggled ON.  (Bug#1280)
+	(modifier_set): Do not omit checking the Num Lock key.
 
 2012-11-07  Dmitry Antipov  <dmantipov@yandex.ru>
 
