--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,10 @@
 2012-11-07  Chong Yidong  <cyd@gnu.org>
 
+	* mini.texi (Basic Minibuffer): New node.  Document
+	minibuffer-electric-default-mode.
+
+	* display.texi (Visual Line Mode): Fix index entry.
+
 	* buffers.texi (Several Buffers): List Buffer Menu command anmes,
 	and index the keybindings.  Document tabulated-list-sort.
 	(Kill Buffer): Capitalize Buffer Menu.
