--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,10 +1,9 @@
 2012-11-07  Eli Zaretskii  <eliz@gnu.org>
 
-	* w32fns.c (w32_wnd_proc): Don't directly handle key chords
-	including modifiers from toggle key, such as Scroll Lock, if the
-	respective keys are treated as function keys, not as modifiers.
-	This avoids destroying non-ASCII keyboard input when Scroll Lock
-	is toggled ON.  (Bug#1280)
+	* w32fns.c (modifier_set): Don't report modifiers from toggle key,
+	such as Scroll Lock, if the respective keys are treated as
+	function keys, not as modifiers.  This avoids destroying non-ASCII
+	keyboard input when Scroll Lock is toggled ON.  (Bug#1280)
 	(modifier_set): Do not omit checking the Num Lock key.
 
 2012-11-07  Dmitry Antipov  <dmantipov@yandex.ru>
