--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,7 +2,8 @@
 
 	* cl.texi (Obsolete Setf Customization):
 	Revert defsetf example to the more correct let rather than prog1.
-	Give define-modify-macro and defsetf gv.el replacements.
+	Give define-modify-macro, defsetf, and define-setf-method
+	gv.el replacements.
 
 2012-11-06  Glenn Morris  <rgm@gnu.org>
 
