--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/gv.el (gv-define-simple-setter): Fix last change
+	(bug#12812).
+
 2012-11-07  Chong Yidong  <cyd@gnu.org>
 
 	* minibuf-eldef.el (minibuffer-eldef-shorten-default): Convert to
