--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-08  Glenn Morris  <rgm@gnu.org>
+
+	* vc/diff-mode.el (diff-remove-trailing-whitespace): Doc fix.
+
 2012-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/gv.el (gv-define-simple-setter): Fix last change
