--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-08  Chong Yidong  <cyd@gnu.org>
+
+	* trouble.texi (Crashing): Copyedits.
+
 2012-11-08  Glenn Morris  <rgm@gnu.org>
 
 	* files.texi (Diff Mode): Trailing whitespace updates.
