* lisp/emacs-lisp/gv.el (gv-ref, gv-deref): New function and macro.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,11 @@
 2012-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/bytecomp.el (byte-compile-initial-macro-environment):
+	Byte-compile *before* eval in eval-and-compile.
+	(byte-compile-log-warning): Remove redundant inhibit-read-only.
+	(byte-compile-file-form-autoload): Don't hide actual definition.
+	(byte-compile-maybe-guarded): Accept `functionp' as well.
+
 	* emacs-lisp/gv.el (gv-ref, gv-deref): New function and macro.
 
 2012-11-07  Michael Albinus  <michael.albinus@gmx.de>
