--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-08  Julien Danjou  <julien@danjou.info>
+
+	* progmodes/ruby-mode.el (auto-mode-alist): Add Rakefile in
+	`auto-mode-alist' (Bug#12835).
+
 2012-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/perl-mode.el (perl-prettify-symbols): New defcustom.
