--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-08  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* server.el (server-create-window-system-frame): Handle Nextstep
+	specially (Bug#12780).
+
 2012-11-08  Glenn Morris  <rgm@gnu.org>
 
 	* mail/emacsbug.el (report-emacs-bug-query-existing-bugs):
