* lisp/progmodes/js.el: Prefer advice to cl-letf's sneaky rebinding. (c-forward-sws, c-backward-sws, c-beginning-of-macro): Advise. (js--filling-paragraph): New var. (js-c-fill-paragraph): Bind it instead of letf-ing the functions.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-08  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/js.el (js--filling-paragraph): New var.
+	(c-forward-sws, c-backward-sws, c-beginning-of-macro): Advise.
+	(js-c-fill-paragraph): Prefer advice to cl-letf so the rebinding is
+	less sneaky.
+
 2012-11-08  Julien Danjou  <julien@danjou.info>
 
 	* progmodes/ruby-mode.el (auto-mode-alist): Add Rakefile in
